--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "prisma": "6.5.0"
   }
 }
